zellij-utils/src/snapshots/zellij_utils__session_serialization__tests__can_serialize_multiple_tabs.snap
---
source: zellij-utils/src/session_serialization.rs
assertion_line: 2207
expression: kdl.0
---
layout {
    tab name="First tab" {
        pane
    }
    tab name="Second tab" {
        pane split_direction="vertical" {
            pane size=10
            pane size=10
        }
    }
}
