zellij-utils/src/snapshots/zellij_utils__session_serialization__tests__can_serialize_new_tab_template.snap
---
source: zellij-utils/src/session_serialization.rs
assertion_line: 2047
expression: kdl.0
---
layout {
    new_tab_template {
        pane
        pane
        floating_panes {
            pane {
            }
            pane {
            }
            pane {
            }
        }
    }
}

