zellij-utils/src/snapshots/zellij_utils__session_serialization__tests__can_serialize_tab_with_multiple_stacked_panes_in_the_same_node.snap
---
source: zellij-utils/src/session_serialization.rs
assertion_line: 1812
expression: kdl.0
---
layout {
    tab name="Tab with \"stacked panes\"" {
        pane stacked=true {
            pane
            pane expanded=true
            pane
        }
        pane size=10
        pane stacked=true {
            pane
            pane expanded=true
            pane
        }
    }
}

