zellij-utils/src/snapshots/zellij_utils__session_serialization__tests__can_serialize_tab_with_stacked_panes.snap
---
source: zellij-utils/src/session_serialization.rs
assertion_line: 1973
expression: kdl.0
---
layout {
    tab name="Tab with \"stacked panes\"" {
        pane stacked=true {
            pane
            pane expanded=true
            pane
        }
    }
}

