zellij-utils/src/snapshots/zellij_utils__session_serialization__tests__global_cwd.snap
---
source: zellij-utils/src/session_serialization.rs
assertion_line: 1168
expression: kdl.0
---
layout {
    cwd "/path/to/m\"y/global cwd"
}

